fix header and large text on mobile

--- a/default-styles.css
+++ b/default-styles.css
@@ -62,16 +62,13 @@ mark {
   gap: 2rem;
   left: 50%;
   transform: translateX(-50%);
-  top: -6rem;
+  top: 1.25rem;
   padding: 0.5rem 1.25rem;
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
   border-radius: 1.875rem;
   z-index: 10;
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
-  animation: slideTop 0.3s ease-in-out forwards;
-  animation-delay: 0.5s;
-  animation-fill-mode: forwards;
 }
 
 .headerBlur, .banner {
@@ -151,15 +148,6 @@ mark {
   translate: -50% 0;
   left: 50%;
   bottom: 2rem;
-}
-
-@keyframes slideTop {
-  0% {
-    top: -6rem;
-  }
-  100% {
-    top: 1.25rem;
-  }
 }
 
 @keyframes fadeIn {
