--- a/styles.css
+++ b/styles.css
@@ -36,5 +36,6 @@
 
   .giantText {
       margin-top: 50px;
+      font-size: 4rem;
   }
 }
